<resources>
    <string name="app_name">WiFi Monitor</string>
    <string name="text">text</string>
    <string name="wlan">wlan</string>
    <string name="WiFi">WiFi</string>
    <string name="author">author</string>
    <string name="fwz">fwz</string>
    <string name="debugTag">debugTag</string>
    <string name="connect">connect</string>
    <string name="back">back</string>
    <string name="test">test</string>
    <string name="password">password</string>
    <string name="ScanResult">ScanResult</string>
    <string name="Connect">Connect</string>
    <string name="Cancel">Cancel</string>
    <string name="moreInfo">more info</string>
    <string name="detail">detail</string>
    <string name="connected">connected</string>
    <string name="SSID">SSID</string>
    <string name="BSSID">BSSID</string>
    <string name="MAC">MAC</string>
    <string name="Rssi">Rssi</string>
    <string name="Level">Level</string>
    <string name="Frequency">Frequency</string>
    <string name="Capabilities">Capabilities</string>
    <string name="LinkSpeed">LinkSpeed</string>
    <string name="MacAdress">MacAdress</string>
    <string name="SupplicantState">SupplicanteState</string>
    <string name="NetworkId">NetworkId</string>
    <string name="HiddenSSID">HiddenSSID</string>
    <string name="DetailedStateOf">DetailedStateOf</string>
    <string name="DescribeContents">DescribeContent</string>
    <string name="State">State</string>
    <string name="IpAddress">IpAddress</string>
    <string name="refresh">refresh</string>
    <string name="clear">Clear</string>
    <string name="chooseNetwork">choose network</string>
    <string name="wifiInfo">WiFi info</string>
    <string name="wifiConfigurations">WiFi configurations</string>
    <string name="All">All</string>
    <string name="debug">debug</string>
    <string name="dBm">dBm</string>
    <string name="disconnect">disconnect</string>
    <string name="Setting">Setting</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="APSwitch">AP Switch</string>
    <string name="clearNetwork">clear network</string>
    <string name="TrafficStats">Traffic Status</string>
    <string name="AreYouSureToClearNetwork">Are you sure to clear network?</string>
    <string name="OK">OK</string>
    <string name="version">WiFi Monitor v3.0</string>
    <string name="MainFunction">Main function</string>
    <string name="ApAutoSwitch">AP auto switch</string>
    <string name="Disconnected">Disconnected</string>
    <string name="Channel">Channel</string>
    <string name="wifiGraph">WiFi graph</string>
    <string name="apSwitch">AP switch</string>
    <string name="more">more</string>
    <string name="app">app</string>
    <string name="uploadTraffic">upload traffic</string>
    <string name="downLoadTraffic">download traffic</string>
</resources>
