<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/header_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/img_current_wifi_strength"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/wifi_level2"/>

        <TextView
            android:id="@+id/tv_current_wifi_ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/text"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/item_func_wifi_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="onClickFunction"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/infomation"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/wifiInfo"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_func_wifi_graph"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="onClickFunction"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/graph"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/wifiGraph"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_func_ap_switch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="onClickFunction"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/switch_ap"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/APSwitch"
                android:textSize="16sp"/>
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/colorLightGrey"/>

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/item_func_traffic_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="onClickFunction"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/flow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/TrafficStats"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_func_clear_network"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="onClickFunction"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/sweep"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_func_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="onClickFunction"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/more"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/About"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>